--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@
 }
 /* the banner/header is designed */
 header{
-    background: linear-gradient( blue,orange);
+    background: linear-gradient(90deg, rgb(255, 189, 67),rgb(53, 150, 241));
     color: aliceblue;
     font-size: 45px;
     text-align: center;
 }
 body{
-    background: url(https://openweather.co.uk/storage/app/media/we-are-pleased-announce-our-new-statistical-weather-data-api-now-available.png);
+    background: url(https://cdn.windowsreport.com/wp-content/uploads/2019/08/Storm-Weather-886x590.jpg);
+    background-repeat: no-repeat ;
     background-size: cover;
 }
 .input{
