--- a/style.css
+++ b/style.css
@@ -22,3 +22,17 @@ position: absolute;
 font-size: larger;
 text-align: center;
 }
+
+.todayWeather {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid #252506;
+    text-align: center;
+    background-color: aliceblue;
+    width:fit-content;
+    }
+
+.icon{
+    vertical-align: middle;
+}
