--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
     text-align: center;
 }
 body{
-    /* background: url(https://cdn.windowsreport.com/wp-content/uploads/2019/08/Storm-Weather-886x590.jpg); */
+    background: url(https://cdn.windowsreport.com/wp-content/uploads/2019/08/Storm-Weather-886x590.jpg);
     background-repeat: no-repeat ;
     background-size: cover;
 }
